--- a/package.json
+++ b/package.json
@@ -2,23 +2,10 @@
   "name": "antoxapro.github.com",
   "version": "1.0.0",
   "description": "AntoXaPRO Web Site",
-  "main": "index.js",
-  "directories": {
-    "doc": "docs"
-  },
-  "scripts": {
-    "build": "pug src/vievs/pug/pages --out docs"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AntoXaPRO/axp.github.com.git"
-  },
+  "main": "src",
+  "scripts": {},
   "author": "AntoXa PRO <info@antoxa.pro>",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/AntoXaPRO/axp.github.com/issues"
-  },
-  "homepage": "https://antoxapro.github.io",
   "devDependencies": {
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
